@@ -393,3 +393,5 @@ l=9 ; if (l=9) then 1						1
 l=9 ; if (l=10) then 1 else 2					2
 l=9 ; if (l=10) then 1 else 2 ; l				9
 A=[1,2;3,4];B=A+4;[A,0;0,B]					[1,2,0,0;3,4,0,0;0,0,5,6;0,0,7,8]
+sum n in ColumnsOf([1,2;3,4]) do n				[3;7]
+sum n in RowsOf([1,2;3,4]) do n					[4,6]
