@@ -1,3 +1,13 @@
+Fri Oct 11 10:56:59 2002  George Lebl <jirka@5z.com>
+
+	* src/*.c, src/eval.h: put the free_trees extern in the header
+
+	* src/matrixw.[ch], src/matrix.[ch], src/eval.c, src/parseutil.c,
+	  src/funclib.c: Add RowsOf and ColumnsOf function which are useful
+	  for the for/in loops (or sum/in or prod/in)
+
+	* README: update a tad
+
 Fri Oct 11 10:09:30 2002  George Lebl <jirka@5z.com>
 
 	* src/eval.c: fix do/while/until loops
